--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="点击屏幕选择步行起点" />
+        android:text="移动箭头更改起点" />
 
     <life.StepView
         android:id="@+id/step_surfaceView"
